# tiny-chirp-microflow

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  RESULTS.md  laze-project.yml  prj.conf  pyproject.toml
boards/: nrf54lm20dk_nrf54lm20b_cpuapp.overlay
building/: cascade_sincnet_mel.ipynb  cnn_mel.ipynb  cnn_time.ipynb  export_audio_sample_rs.ipynb  leaf.ipynb  leaf_multilayer.ipynb  model_parts.py  results_analysis.ipynb  rms_analysis.ipynb  rust_export.py  sincnet.ipynb  sincnet_chunked.ipynb  sincnet_mimic_mel.ipynb  sincnet_multi.ipynb  tinychirp_cnn.ipynb
building_tensorflow/: cascade_sincnet_mel.ipynb  cnn_mel.ipynb  cnn_time.ipynb  export_audio_sample_rs.ipynb  leaf.ipynb  leaf_multilayer.ipynb  leaf_time multilayer.ipynb  leaf_time.ipynb  model_parts.py  models.keras  pyproject.toml  results_analysis.ipynb  rust_export.py  sincnet.ipynb  sincnet_multi.ipynb  sincnet_multilayer.ipynb  sincnet_real.ipynb  sincnet_real_multilayer.ipynb  sincnet_time.ipynb  sincnet_time_hyper.ipynb  sincnet_time_multilayer.ipynb  sincnet_time_real.ipynb  sincnet_time_real_multilayer.ipynb  tinychirp_cnn.ipynb  utils.py
building_torch/: cnn_mel.ipynb  pyproject.toml  tinychirp_cnn_torch.ipynb
models/: cnn_mel_tf.tflite  cnn_mel_torch.tflite  cnn_time_tf.tflite  leaf_tf.tflite  leaf_time_tf.tflite  sincnet_mimic_mel_tf.tflite  sincnet_multi_tf.tflite  sincnet_multilayer_tf.tflite  sincnet_real.tflite  sincnet_real_multilayer_tf.tflite  sincnet_tf.tflite  sincnet_time_real_multilayer.tflite  sincnet_time_tf.tflite  tinychirp_cnn.tflite
results/: cascade_sincnet_multi__cnn_mel.json  cascade_sinctomel.json  cnn_mel_tf.jsonl  cnn_time_tf.jsonl  leaf_tf.jsonl  leaf_time_tf.jsonl  sincnet_mimic_mel_tf.jsonl  sincnet_multi_tf.jsonl  sincnet_multilayer_tf.jsonl  sincnet_real_multilayer_tf.jsonl  sincnet_real_tf.jsonl  sincnet_tf.jsonl  sincnet_time_multilayer_tf.jsonl  sincnet_time_real_multilayer.jsonl  sincnet_time_tf.jsonl
scripts/: cnn_mel.yaml  compile.sh  gen_assets.py  gen_mel_input.py  gen_sincnet_assets.py  sincnet.yaml  sincnet_chunked.yaml
src/: audio_raw.rs  main.c  main.rs  mel_axon.c  mel_axon.h  mel_compute.c  mel_fft_cpu.c  sample_input.c  sample_input.h  spectrogram.rs
src/nrf/: main.c  main_sincnet.c  mel_compute.c  mel_compute.h  mel_fft_axon_split.c  mel_fft_cpu.c  sample_input.h  sample_input_raw.c  sample_input_sincnet.c  sample_input_sincnet.h
