[project]
name = "tiny-chirp-microflow-building"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy",
  "librosa",
  "torch",
  "torchaudio",
  "torchvision",
  "litert-torch",
  "ipykernel",
  "jupyter",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
